--- a/css/styles.css
+++ b/css/styles.css
@@ -48,12 +48,32 @@ a {
     flex-direction: column;
 }
 
+/* Base styles for small devices */
 .container {
-    width: 1158px;
-    margin-right: auto;
+    min-width: 320px;
+    max-width: 396px;
     margin-left: auto;
-    padding: 0 15px;
+    margin-right: auto;
+    padding-left: 16px;
+    padding-right: 16px;
+    outline: 2px solid red;
 }
+
+/* Tablet screen */
+@media only screen and (min-width: 768px) {
+    .container {
+        max-width: 768px;
+    }
+}
+
+/* Desktop screen */
+@media only screen and (min-width: 1158px) {
+    .container {
+        max-width: 1128px;
+        padding: 0 15px;
+    }
+}
+
 
 .page-header {
     box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08),
