--- a/css/styles.css
+++ b/css/styles.css
@@ -184,14 +184,6 @@ margin-right: 76px;
 /* Tablet */
 @media only screen and (min-width: 768px) {
     .menu-list {
-        display: inline-block;
-        
-    }
-}
-
-/* Desktop */
-@media only screen and (min-width: 1158px) {
-    .menu-list {
         display: flex;
         gap: 40px;
     }
@@ -239,7 +231,27 @@ margin-right: 76px;
 .menu-link:hover, 
 .menu-link:active {
     color: var(--button-filter-hover);
+} 
+
+/* Mobile */
+@media only screen and (max-width: 767px) {
+.menu-link-mobile {
+    font-family: Roboto;
+    font-size: 36px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 40px;
+    letter-spacing: 0.72px;
+    text-transform: capitalize;
+    color: var(--brand-background);
 }
+.menu-link-mobile:active {
+    color: var(--brand);
+}
+}
+
+
+
 
 .active::after {
     content: '';
@@ -255,7 +267,13 @@ margin-right: 76px;
 
 .active {
     color: var(--button-filter-hover);
-    
+}
+
+/* Base styles */
+@media only screen and (max-width: 767px) {
+    .active {
+        display: none;
+    }
 }
 
 .menu-list > a {
@@ -298,7 +316,16 @@ margin-right: 76px;
     }
 }
 
-.address.list > a {
+/* Base */
+.address-list-mobile {
+    display: flex;
+        flex-wrap: wrap;
+        gap: 12px;
+        font-style: normal;
+        margin-left: auto;
+}
+
+.address-list > a {
     color: var(--text);
 }
 
@@ -1209,7 +1236,6 @@ letter-spacing: 0.48px;
 }
 
 .sbscrb-icon {
-    
     fill: var(--page);
     right: 24px;
     bottom: 8px; 
@@ -1223,7 +1249,6 @@ letter-spacing: 0.48px;
     display: flex;
     align-items: center;
     justify-content: center;
-
     margin: 0;
     padding: 0;
     background-color: transparent;
@@ -1244,7 +1269,25 @@ letter-spacing: 0.48px;
     background-color: rgba(0, 0, 0, 0.1);
 }
 
-.menu-container {
+.close-mobile-btn {
+    
+        position: absolute;
+        top: 24px;
+        right: 24px;
+        border: 1px solid rgba(0, 0, 0, 0.10);
+        padding: 0;
+        border-radius: 50%;
+        width: 24px;
+        height: 24px;
+        background-color: transparent;
+        border-color: var(--border);
+        display: flex;
+        align-items: center;
+        justify-content: center;
+}
+
+
+.menu-container {    
     position: fixed;
     top: 0;
     left: 0;
@@ -1253,20 +1296,20 @@ letter-spacing: 0.48px;
     padding: 32px;
     background-color: #3f51b5;
     z-index: 999;
-
     transform: translateX(100%);
     transition: transform 250ms ease-in-out;
 }
 
 .menu-container.is-open {
     transform: translateX(0);
+    background-color: var(--page);
 }
 
 .menu-container .menu-toggle {
     position: absolute;
     top: 16px;
     right: 16px;
-    color: #fff;
+    color: var(--brand-background);
 }
 
 .mobile-menu {
@@ -1278,6 +1321,6 @@ letter-spacing: 0.48px;
 .mobile-menu .link {
     display: block;
     padding: 10px;
-    color: #fff;
+    color: var(--brand-background);
     text-decoration: none;
 }
