--- a/css/styles.css
+++ b/css/styles.css
@@ -213,7 +213,7 @@ margin-right: 76px;
     text-decoration: none;
 }
 
-.menu-link:focus, .menu-link:active {
+.menu-link:focus, .menu-link:active, .menu-link:hover {
     color: var(--button-filter-hover);
 }
 
@@ -228,11 +228,6 @@ margin-right: 76px;
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.menu-link:hover, 
-.menu-link:active {
-    color: var(--button-filter-hover);
-} 
-
 /* Mobile */
 @media only screen and (max-width: 767px) {
 .menu-link-mobile {
@@ -245,13 +240,11 @@ margin-right: 76px;
     text-transform: capitalize;
     color: var(--brand-background);
 }
-.menu-link-mobile:active {
-    color: var(--brand);
+.menu-link-mobile:hover,
+.menu-link-mobile:focus {
+    color: var(--button-filter-hover);
 }
 }
-
-
-
 
 .active::after {
     content: '';
@@ -1004,8 +997,6 @@ margin: 0 auto;
 margin-bottom: 16px;
 }
 
-
-
 .form-label {
     position: relative;
     display: block;
@@ -1061,7 +1052,6 @@ letter-spacing: 0.48px;
     align-items: center;
     margin-bottom: 24px;
     justify-content: baseline;
-    
 }
 
 .form-input {    
@@ -1129,7 +1119,6 @@ letter-spacing: 0.48px;
     opacity: 1;
     border-color: var(--brand);
 }
-
 
 .check-span {
     display: inline-flex;
@@ -1226,7 +1215,6 @@ letter-spacing: 0.48px;
     display: flex;
     align-items: center;
     justify-content: center;
-    
     padding: 8px 24px;
     min-width: 165px;
     height: 40px;
@@ -1294,7 +1282,7 @@ letter-spacing: 0.48px;
     width: 100vw;
     height: 100vh;
     padding: 32px;
-    background-color: #3f51b5;
+    background-color: var(--page);
     z-index: 999;
     transform: translateX(100%);
     transition: transform 250ms ease-in-out;
@@ -1302,7 +1290,6 @@ letter-spacing: 0.48px;
 
 .menu-container.is-open {
     transform: translateX(0);
-    background-color: var(--page);
 }
 
 .menu-container .menu-toggle {
@@ -1323,4 +1310,11 @@ letter-spacing: 0.48px;
     padding: 10px;
     color: var(--brand-background);
     text-decoration: none;
+}
+
+/* Mobile */
+@media only screen and (max-width: 767px) {
+.touch {
+    color: var(--brand);
+}
 }
