--- a/css/styles.css
+++ b/css/styles.css
@@ -232,13 +232,13 @@ margin-right: 76px;
 @media only screen and (max-width: 767px) {
 .menu-link-mobile {
     font-family: Roboto;
-    font-size: 36px;
-    font-style: normal;
-    font-weight: 700;
-    line-height: 40px;
-    letter-spacing: 0.72px;
-    text-transform: capitalize;
-    color: var(--brand-background);
+        font-size: 36px;
+        font-style: normal;
+        font-weight: 700;
+        line-height: 40px;
+        letter-spacing: 0.72px;
+        text-transform: capitalize;
+        color: var(--brand-background);
 }
 .menu-link-mobile:hover,
 .menu-link-mobile:focus {
@@ -1258,20 +1258,19 @@ letter-spacing: 0.48px;
 }
 
 .close-mobile-btn {
-    
-        position: absolute;
-        top: 24px;
-        right: 24px;
-        border: 1px solid rgba(0, 0, 0, 0.10);
-        padding: 0;
-        border-radius: 50%;
-        width: 24px;
-        height: 24px;
-        background-color: transparent;
-        border-color: var(--border);
-        display: flex;
-        align-items: center;
-        justify-content: center;
+    position: absolute;
+    top: 24px;
+    right: 24px;
+    border: 1px solid rgba(0, 0, 0, 0.10);
+    padding: 0;
+    border-radius: 50%;
+    width: 24px;
+    height: 24px;
+    background-color: transparent;
+    border-color: var(--border);
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 
@@ -1281,12 +1280,14 @@ letter-spacing: 0.48px;
     left: 0;
     width: 100vw;
     height: 100vh;
-    padding: 32px;
+    padding-top: 80px;
+    padding-left: 40px;
     background-color: var(--page);
     z-index: 999;
     transform: translateX(100%);
     transition: transform 250ms ease-in-out;
 }
+
 
 .menu-container.is-open {
     transform: translateX(0);
@@ -1300,10 +1301,14 @@ letter-spacing: 0.48px;
 }
 
 .mobile-menu {
+    display: column;
+    gap: 40px;
     padding: 0;
     margin: 0;
     list-style: none;
 }
+
+
 
 .mobile-menu .link {
     display: block;
@@ -1313,8 +1318,6 @@ letter-spacing: 0.48px;
 }
 
 /* Mobile */
-@media only screen and (max-width: 767px) {
-.touch {
+.menu-link-mobile.touch {
     color: var(--brand);
-}
 }
