--- a/css/styles.css
+++ b/css/styles.css
@@ -283,6 +283,14 @@ margin-right: 76px;
 }
 }
 
+/* Mobile */
+.address-mobile {
+    display: flex;
+    flex-direction: column-reverse;
+    gap: 40px;
+    margin-bottom: 48px;
+}
+
 /* Base styles */
 @media only screen and (max-width: 767px) {
     .address-list {
@@ -290,6 +298,29 @@ margin-right: 76px;
     }
 }
 
+/* Mobile */
+.mail-mobile {
+    color: var(--text);
+    font-family: Roboto;
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 24px;
+    letter-spacing: 0.4px;
+}
+
+/* Mobile */
+.tel-mobile {
+    color: var(--brand);
+    font-family: Roboto;
+    font-size: 36px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 40px;
+    letter-spacing: 0.72px;
+    text-transform: capitalize;
+    
+}
 
 /* Tablet */
  @media only screen and (min-width: 768px) {
@@ -324,11 +355,14 @@ margin-right: 76px;
     color: var(--text);
 }
 
+/* Tablet */
+@media only screen and (min-width: 768px) {
 .address-link {
     letter-spacing: 0.02em;
     color: var(--text);
     padding: 24px 0;
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1); 
+}
 }
 
 .address-link:hover,
@@ -509,6 +543,13 @@ margin-right: 76px;
     }
 }
 
+/* Mobile&Tablet */
+@media only screen and (max-width: 1157px) {
+    .we-doing {
+        display: none;
+    }
+}
+
 .we-doing {
     padding-bottom: 120px;
 }
@@ -536,6 +577,24 @@ margin-right: 76px;
     margin-bottom: 72px;
 }
 
+.team {
+    background-color: var(--logo-down);
+}
+
+/* Tablet */
+@media only screen and (max-width: 767px) {
+    .team {
+        padding: 96px 0;
+    }
+}
+
+/* Desktop */
+@media only screen and (min-width: 1158px) {
+    .team {
+        padding: 120px 0;
+    }
+}
+
 .title-team {
     font-weight: 700;
     font-size: 36px;
@@ -551,21 +610,44 @@ margin-right: 76px;
     text-align: center;
 }
 
-.team {
-    background-color: var(--logo-down);
-    padding: 120px 0;
+/* Mobile */
+@media only screen and (max-width: 767px) {
+    .list-team {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        gap: 72px
+    }
 }
 
-.list-team {
-    display: flex;
-    gap: 24px;
+/* Tablet */
+@media only screen and (min-width: 768px) {
+    .list-team {
+        display: flex;
+        gap: 24px;
+    }
 }
 
+/* Base styles */
 .item-team {
     background: var(--page);
-    width: calc((100% - 72px) / 4);
     border-radius: 0px 0px 4px 4px;
     box-shadow: 0px 2px 1px 0px rgba(46, 47, 66, 0.08), 0px 1px 1px 0px rgba(46, 47, 66, 0.16), 0px 1px 6px 0px rgba(46, 47, 66, 0.08);
+}
+
+/* Tablet */
+@media only screen and (min-width: 768px) {
+    .item-team {
+        width: calc((100% - 24px) / 2);
+    }
+}
+
+/* Desktop */
+@media only screen and (min-width: 1158px) {
+    .item-team {
+        width: calc((100% - 72px) / 4);
+    }
 }
 
 .third-title.card  {
@@ -720,10 +802,25 @@ max-width: 264px;
     align-items: center;
 }
 
+/* Base styles */
 .socialmedia-list {
     display: flex;
     gap: 16px;
 }
+
+/* Mobile */
+@media only screen and (min-width: 320px) and (max-width: 427px) {
+    .socialmedia-list.social-mobile {
+        gap: 34px;
+    }
+}
+
+/* Tablet */
+.socialmedia-list.social-mobile {
+    display: flex;
+    gap: 56px;
+    }
+
 
 .right-side {
     margin-right: 80px;
@@ -1003,13 +1100,13 @@ margin-bottom: 16px;
     position: relative;
     display: block;
     line-height: 1.17;
-        margin-bottom: 4px;
-        font-size: 12px;
-        font-family: Roboto;
-        font-style: normal;
-        font-weight: 400;
-        letter-spacing: 0.48px;
-        color: var(--border-icons);
+    margin-bottom: 4px;
+    font-size: 12px;
+    font-family: Roboto;
+    font-style: normal;
+    font-weight: 400;
+    letter-spacing: 0.48px;
+    color: var(--border-icons);
 }
 
 .label-container {
@@ -1279,17 +1376,16 @@ letter-spacing: 0.48px;
 .menu-container {  
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
     position: fixed;
     top: 0;
     left: 0;
     width: 100vw;
     height: 100vh;
-    
     background-color: var(--page);
     z-index: 999;
     transform: translateX(100%);
     transition: transform 250ms ease-in-out;
+    padding: 80px 35px 40px 40px;
 }
 
 
@@ -1299,28 +1395,28 @@ letter-spacing: 0.48px;
 
 .menu-container .menu-toggle {
     position: absolute;
-    top: 16px;
-    right: 16px;
+    top: 24px;
+    right: 24px;
     color: var(--brand-background);
 }
 
 .mobile-menu {
+
     padding: 0;
-    margin-top: 80px;
-    margin-left: 40px;
-    margin-right: auto;
-    margin-bottom: 284px;
     list-style: none;
+    margin-bottom: auto;
 }
 
+.menu-list-item:not(:last-child) {
+    margin-bottom: 40px;
+}
 
-
-.mobile-menu .link {
+/* .mobile-menu .link {
     display: block;
     padding: 10px;
     color: var(--brand-background);
     text-decoration: none;
-}
+} */
 
 /* Mobile */
 .menu-link-mobile.touch {
