--- a/css/styles.css
+++ b/css/styles.css
@@ -900,6 +900,7 @@ background-color: var(--button-filter-hover);
 @media only screen and (min-width: 1158px) {
     .container-footer {
         display: flex;
+        flex-wrap: nowrap;
         align-items: baseline;
     }
 }
@@ -969,8 +970,7 @@ max-width: 264px;
 @media only screen and (min-width: 1158px) {
     .left-side {
         margin-right: 120px;
-        align-items: center;
-        text-align: center;
+
 }
 }
 
