--- a/css/styles.css
+++ b/css/styles.css
@@ -440,8 +440,14 @@ margin-right: 76px;
     max-width: 496px;
     margin-left: auto;
     margin-right: auto;
-    margin-bottom: 48px;
-    
+    margin-bottom: 48px;    
+}
+
+/* Mobile */
+@media only screen and (min-width: 320px) and (max-width: 767.98px) {
+    .title-hero {
+        font-size: 36px;
+}
 }
 
 .order-button {
