--- a/css/styles.css
+++ b/css/styles.css
@@ -429,6 +429,13 @@ margin-right: 76px;
     }
 }
 
+/* Desktop */
+@media only screen and (min-width: 1158px) {
+    .hero {
+        padding: 188px 0;
+    }
+}
+
 .container-hero {    
     align-items: center;
 }
@@ -1232,6 +1239,7 @@ max-width: 264px;
     z-index: 100;
     background-color: rgba(46, 47, 66, 0.4);
     transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    overflow: scroll;
 }
 
 .backdrop.is-hidden {
@@ -1247,18 +1255,25 @@ max-width: 264px;
 
 .modal {
     position: absolute;
-    top: 50%;
+    top: 10px;
     left: 50%;
-    min-width: 408px;
+    min-width: 320px;
     min-height: 584px;
     border-radius: 4px;
     background: var(--modal-back);
     box-shadow: 0px 2px 1px 0px rgba(0, 0, 0, 0.20), 0px 1px 3px 0px rgba(0, 0, 0, 0.12), 0px 1px 1px 0px rgba(0, 0, 0, 0.14);
-    transform: translate(-50%, -50%) scale(1);
+    transform: translate(-50%) scale(1);
     transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
     padding: 72px 24px 24px;
 }
 
+@media only screen and (min-width: 768px) {
+    .modal {
+        width: 408px;
+        top: 50%;
+        transform: translateX(-50%) translateY(-50%);
+    }
+} 
 .modal-btn {
     cursor: pointer;
     position: absolute;
@@ -1639,8 +1654,6 @@ letter-spacing: 0.48px;
 
 /* Mobile menu */
 .menu-toggle {
-    min-height: 40px;
-    min-width: 40px;
     display: flex;
     align-items: center;
     justify-content: center;
